# scratch-vm-wasm-runtime

./: Cargo.toml  LICENSE_MIT  README.md
docs/: bytecode-schematics.md
src/: execute_instruction.rs  instruction.rs  lib.rs  runner.rs  scratch_value.rs
